add_subdirectory(hello_world)
add_subdirectory(ddr_test)
add_subdirectory(vera_integrated)
add_subdirectory(sdspi_test)
add_subdirectory(fatfs_test)
add_subdirectory(audio_dac_test)
add_subdirectory(ym2149_dac_test)
if (BL_TARGET_FPGA STREQUAL "arty-a7-100")
  add_subdirectory(stsound_test)
endif()
add_subdirectory(usb_hid_sys_test)
add_subdirectory(spiflash_test)
add_subdirectory(timer_uart_gpio_irqs)
add_subdirectory(i2c_test)
if(CMAKE_BUILD_TYPE STREQUAL "fpga")
  add_subdirectory(rtcc_test)
endif()
add_subdirectory(reset_test)
add_subdirectory(invalid_address)
add_subdirectory(ibex_perf_test)


